[gd_scene load_steps=90 format=3 uid="uid://cpoyka0hsm1cq"]

[ext_resource type="Script" uid="uid://cevdwv3igniyw" path="res://Scripts/fire_player.gd" id="1_iceyr"]
[ext_resource type="Resource" uid="uid://dg28wb0oa845d" path="res://inventory/inverntory1.tres" id="2_8qgqc"]
[ext_resource type="Texture2D" uid="uid://dlx17ohf0s6yp" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Attack_1.png" id="2_vjb3o"]
[ext_resource type="Texture2D" uid="uid://dpmytr0fh0y52" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Attack_2.png" id="3_8qgqc"]
[ext_resource type="Texture2D" uid="uid://casbcvoxgmxiw" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Dead.png" id="4_7557m"]
[ext_resource type="Texture2D" uid="uid://hjdjixfosh2x" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Fireball.png" id="5_fi5wl"]
[ext_resource type="Texture2D" uid="uid://c6y5ge3qm42ig" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Flame_jet.png" id="6_casos"]
[ext_resource type="Texture2D" uid="uid://poqm3pghhc73" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Idle.png" id="7_xyyb1"]
[ext_resource type="Texture2D" uid="uid://bqx2pcb0oh2jq" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Jump.png" id="8_s5buu"]
[ext_resource type="Texture2D" uid="uid://e6inldt8g35j" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Run.png" id="9_81xw6"]
[ext_resource type="Texture2D" uid="uid://dmxgbioddqcrq" path="res://assets/Player/free-wizard-sprite-sheets-pixel-art/Fire vizard/Walk.png" id="10_jvf72"]
[ext_resource type="PackedScene" uid="uid://yx06u8vggtgr" path="res://Scenes/inv_ui.tscn" id="12_8qgqc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iceyr"]
height = 66.0

[sub_resource type="AtlasTexture" id="AtlasTexture_v4fl4"]
atlas = ExtResource("2_vjb3o")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aihgq"]
atlas = ExtResource("2_vjb3o")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdlli"]
atlas = ExtResource("2_vjb3o")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytqfe"]
atlas = ExtResource("2_vjb3o")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpwoo"]
atlas = ExtResource("3_8qgqc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8m4t"]
atlas = ExtResource("3_8qgqc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_274yy"]
atlas = ExtResource("3_8qgqc")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibs21"]
atlas = ExtResource("3_8qgqc")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee0k8"]
atlas = ExtResource("4_7557m")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xgmj"]
atlas = ExtResource("4_7557m")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlv5k"]
atlas = ExtResource("4_7557m")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qypha"]
atlas = ExtResource("4_7557m")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_osif2"]
atlas = ExtResource("4_7557m")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bowjs"]
atlas = ExtResource("4_7557m")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kto2"]
atlas = ExtResource("5_fi5wl")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pxbf"]
atlas = ExtResource("5_fi5wl")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pubug"]
atlas = ExtResource("5_fi5wl")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eerhp"]
atlas = ExtResource("5_fi5wl")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0670"]
atlas = ExtResource("5_fi5wl")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n1q5"]
atlas = ExtResource("5_fi5wl")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jea7"]
atlas = ExtResource("5_fi5wl")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay42g"]
atlas = ExtResource("5_fi5wl")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5jv"]
atlas = ExtResource("6_casos")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdye8"]
atlas = ExtResource("6_casos")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktieq"]
atlas = ExtResource("6_casos")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g468"]
atlas = ExtResource("6_casos")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6ls1"]
atlas = ExtResource("6_casos")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxsos"]
atlas = ExtResource("6_casos")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxlgu"]
atlas = ExtResource("6_casos")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihknm"]
atlas = ExtResource("6_casos")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd5j5"]
atlas = ExtResource("6_casos")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytm2h"]
atlas = ExtResource("6_casos")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cowoj"]
atlas = ExtResource("6_casos")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2dla"]
atlas = ExtResource("6_casos")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsoif"]
atlas = ExtResource("6_casos")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq4dp"]
atlas = ExtResource("6_casos")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfugm"]
atlas = ExtResource("7_xyyb1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb3ou"]
atlas = ExtResource("7_xyyb1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r85s"]
atlas = ExtResource("7_xyyb1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0sko"]
atlas = ExtResource("7_xyyb1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30xd"]
atlas = ExtResource("7_xyyb1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6fag"]
atlas = ExtResource("7_xyyb1")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nok44"]
atlas = ExtResource("7_xyyb1")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbu8o"]
atlas = ExtResource("8_s5buu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq0c7"]
atlas = ExtResource("8_s5buu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_88pbv"]
atlas = ExtResource("8_s5buu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwxrc"]
atlas = ExtResource("8_s5buu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_42kd7"]
atlas = ExtResource("8_s5buu")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucn1f"]
atlas = ExtResource("8_s5buu")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp076"]
atlas = ExtResource("8_s5buu")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfu6s"]
atlas = ExtResource("8_s5buu")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c00l5"]
atlas = ExtResource("8_s5buu")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2x73"]
atlas = ExtResource("9_81xw6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w4sl"]
atlas = ExtResource("9_81xw6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgu5c"]
atlas = ExtResource("9_81xw6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_puq4q"]
atlas = ExtResource("9_81xw6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqby0"]
atlas = ExtResource("9_81xw6")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldvsa"]
atlas = ExtResource("9_81xw6")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew34o"]
atlas = ExtResource("9_81xw6")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap8lx"]
atlas = ExtResource("9_81xw6")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tahis"]
atlas = ExtResource("10_jvf72")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvcvu"]
atlas = ExtResource("10_jvf72")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_adm7y"]
atlas = ExtResource("10_jvf72")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gq7e"]
atlas = ExtResource("10_jvf72")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho0n2"]
atlas = ExtResource("10_jvf72")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ob4v"]
atlas = ExtResource("10_jvf72")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_najm8"]
atlas = ExtResource("5_fi5wl")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_siij7"]
atlas = ExtResource("5_fi5wl")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnxkk"]
atlas = ExtResource("5_fi5wl")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g084v"]
atlas = ExtResource("5_fi5wl")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vmcd"]
atlas = ExtResource("5_fi5wl")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6nju"]
atlas = ExtResource("5_fi5wl")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb7s7"]
atlas = ExtResource("5_fi5wl")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_14j4x"]
atlas = ExtResource("5_fi5wl")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_f60y1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4fl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aihgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdlli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytqfe")
}],
"loop": false,
"name": &"Attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpwoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8m4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_274yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibs21")
}],
"loop": false,
"name": &"Attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee0k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xgmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlv5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qypha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osif2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bowjs")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kto2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pxbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pubug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eerhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0670")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n1q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jea7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay42g")
}],
"loop": true,
"name": &"Fireball",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdye8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktieq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g468")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxsos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxlgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihknm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd5j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytm2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cowoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2dla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsoif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq4dp")
}],
"loop": false,
"name": &"Flame_jet",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfugm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb3ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r85s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0sko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d30xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6fag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nok44")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbu8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq0c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88pbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwxrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42kd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucn1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp076")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfu6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c00l5")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2x73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w4sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgu5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puq4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqby0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldvsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew34o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap8lx")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tahis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvcvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adm7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gq7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho0n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ob4v")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_najm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siij7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnxkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g084v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vmcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6nju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb7s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14j4x")
}],
"loop": true,
"name": &"new_animation_1",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8qgqc"]
radius = 16.0
height = 82.0

[node name="Fire_Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_iceyr")
inv = ExtResource("2_8qgqc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-15, 31)
shape = SubResource("CapsuleShape2D_iceyr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f60y1")
animation = &"Flame_jet"
autoplay = "Idle"

[node name="Inv_UI" parent="." instance=ExtResource("12_8qgqc")]
offset_left = -59.0
offset_top = -79.0
offset_right = -59.0
offset_bottom = -79.0

[node name="player_hitbox" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-12, 34)
shape = SubResource("CapsuleShape2D_8qgqc")

[node name="enemy_attack_cooldown" type="Timer" parent="."]

[node name="player_attack_timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="player_hitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="area_exited" from="player_hitbox" to="." method="_on_player_hitbox_area_exited"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="enemy_attack_cooldown" to="." method="_on_enemy_attack_cooldown_timeout"]
[connection signal="timeout" from="player_attack_timer" to="." method="_on_player_attack_timer_timeout"]
